[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Spawner.gd" type="Script" id=1]
[ext_resource path="res://assets/orb.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.3849
height = 0.949059

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.00323
height = 11.3184

[node name="Spawner" type="Area2D"]
position = Vector2( -0.110184, 4.73787 )
collision_layer = 10
collision_mask = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0546875, 0.053833, 0.053833, 1 )
scale = Vector2( 2, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CollisionBox" type="StaticBody2D" parent="."]
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBox"]
rotation = 1.57079
shape = SubResource( 2 )
[connection signal="body_exited" from="." to="." method="_on_Spawner_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
